src/test/ui/typeck/issue-104582.stderr
error: invalid `?` in type
  --> $DIR/issue-104582.rs:2:30
   |
LL |     let my_var: String(String?);
   |                              ^ `?` is only allowed on expressions, not types
   |
help: if you meant to express that the type might not contain a value, use the `Option` wrapper type
   |
LL |     let my_var: String(Option<String>);
   |                        +++++++      ~

error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-104582.rs:2:17
   |
LL |     let my_var: String(String?);
   |                 ^^^^^^^^^^^^^^^ only `Fn` traits may use parentheses
   |
help: use angle brackets instead
   |
LL |     let my_var: String<String?>;
   |                       ~       ~

error[E0658]: use of unstable library feature 'allocator_api'
  --> $DIR/issue-104582.rs:2:24
   |
LL |     let my_var: String(String?);
   |                        ^^^^^^^
   |
   = note: see issue #32838 <https://github.com/rust-lang/rust/issues/32838> for more information
   = help: add `#![feature(allocator_api)]` to the crate attributes to enable

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0214, E0658.
For more information about an error, try `rustc --explain E0214`.
